hphp/hack/test/typecheck/shape_idx_dependent.php.exp
File "shape_idx_dependent.php", line 8, characters 12-34:
Invalid return type (Typing[4110])
File "shape_idx_dependent.php", line 7, characters 37-39:
This is an int
File "shape_idx_dependent.php", line 5, characters 41-44:
It is incompatible with a nullable type
